--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
+        "ts-loader": "^8.0.1",
+        "typescript": "^3.9.7",
         "vue-template-compiler": "^2.6.11"
     }
 }
