--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "php": "^7.2",
         "creativeorange/gravatar": "~1.0",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "nesbot/carbon": "^2.36"
     },
     "require-dev": {
